select column to exploit

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -679,9 +679,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94f960a3-7be0-410c-9246-b37682af9045",
+   "metadata": {},
+   "source": [
+    "# Cleaning Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2865d2f1-8097-429c-925b-dc50ed10baae",
+   "metadata": {},
+   "source": [
+    "### Select column to exploit "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8588cff5-89b1-4ec2-bc67-5ff7e2b10a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>listing_url</th>\n",
+       "      <th>name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood_overview</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_url</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood_cleansed</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>availability_365</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>last_review</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5396</td>\n",
+       "      <td>https://www.airbnb.com/rooms/5396</td>\n",
+       "      <td>Explore the heart of old Paris</td>\n",
+       "      <td>Cozy, well-appointed and graciously designed s...</td>\n",
+       "      <td>You are within walking distance to the Louvre,...</td>\n",
+       "      <td>7903</td>\n",
+       "      <td>https://www.airbnb.com/users/show/7903</td>\n",
+       "      <td>Borzou</td>\n",
+       "      <td>Hôtel-de-Ville</td>\n",
+       "      <td>48.85247</td>\n",
+       "      <td>2.35835</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>$124.00</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>184</td>\n",
+       "      <td>332</td>\n",
+       "      <td>2023-02-18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                        listing_url                            name  \\\n",
+       "0  5396  https://www.airbnb.com/rooms/5396  Explore the heart of old Paris   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  Cozy, well-appointed and graciously designed s...   \n",
+       "\n",
+       "                               neighborhood_overview  host_id  \\\n",
+       "0  You are within walking distance to the Louvre,...     7903   \n",
+       "\n",
+       "                                 host_url host_name neighbourhood_cleansed  \\\n",
+       "0  https://www.airbnb.com/users/show/7903    Borzou         Hôtel-de-Ville   \n",
+       "\n",
+       "   latitude  longitude        room_type    price  minimum_nights  \\\n",
+       "0  48.85247    2.35835  Entire home/apt  $124.00              15   \n",
+       "\n",
+       "   minimum_nights  availability_365  number_of_reviews last_review  \\\n",
+       "0              15               184                332  2023-02-18   \n",
+       "\n",
+       "   calculated_host_listings_count  reviews_per_month  \n",
+       "0                               1               1.99  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df[['id','listing_url','name','description','neighborhood_overview','host_id','host_url','host_name','neighbourhood_cleansed','latitude','longitude','room_type','price','minimum_nights','minimum_nights','availability_365','number_of_reviews','last_review','calculated_host_listings_count','reviews_per_month']].copy()\n",
+    "df1.head(1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91374620-166b-4e65-b599-c3c6f1bcb385",
+   "id": "986ea89a-66fe-4bd6-8dda-2c0290aafc10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88289b2f-7bf5-4f99-b88a-db577d5ade5e",
    "metadata": {},
    "outputs": [],
    "source": []
